<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/resultTxt"
            style="@style/result"
            android:text="" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/addBtn"
                style="@style/btn.operators"
                android:text="@string/button_add" />

            <Button
                android:id="@+id/subBtn"
                style="@style/btn.operators"
                android:text="@string/button_subtarct" />

            <Button
                android:id="@+id/mulBtn"
                style="@style/btn.operators"
                android:text="@string/multiply" />

            <Button
                android:id="@+id/divBtn"
                style="@style/btn.operators"
                android:text="@string/button_divide" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/button7"
                style="@style/btn.digits"
                android:text="@string/button_7" />

            <Button
                android:id="@+id/button8"
                style="@style/btn.digits"
                android:text="@string/button_8" />

            <Button
                android:id="@+id/button9"
                style="@style/btn.digits"
                android:text="@string/button_9" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/button4"
                style="@style/btn.digits"
                android:text="@string/button_4" />

            <Button
                android:id="@+id/button5"
                style="@style/btn.digits"
                android:text="@string/button_5" />

            <Button
                android:id="@+id/button6"
                style="@style/btn.digits"
                android:text="@string/button_6" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/button1"
                style="@style/btn.digits"
                android:text="@string/button_1" />

            <Button
                android:id="@+id/button2"
                style="@style/btn.digits"
                android:text="@string/button_2" />

            <Button
                android:id="@+id/button3"
                style="@style/btn.digits"
                android:text="@string/button_3" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/cBtn"
                style="@style/btn.clear"
                android:text="@string/button_c" />

            <Button
                android:id="@+id/button0"
                style="@style/btn.digits"
                android:text="@string/button_0" />

            <Button
                android:id="@+id/equalBtn"
                style="@style/btn.equal"
                android:text="@string/button_equal" />

        </LinearLayout>

    </LinearLayout>


</LinearLayout>